--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="header">
             <div class="group-flex">
                 <div class="logo-area">
-                    <h1 class="h-logo">
+                    <h1 class="logo">
                         <a href=""><span class="blind">NAVER Careers 로고</span></a>
                     </h1>
                 </div>
@@ -1083,7 +1083,7 @@
 
         <footer class="footer">
             <section class="group-info">
-                <h2 class="f-logo">
+                <h2 class="logo">
                     <a href="">© NAVER Corp.</a>
                 </h2>
                 <a href="" class="link-policy">개인정보 처리방침</a>
