html 웹 표준 검사

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./assets/images/thumbnail.png">
     <title>NAVER Careers</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css">
     <link rel="stylesheet" href="./assets/css/layout.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="icon" href="./assets/images/favicon.ico">
@@ -131,7 +131,7 @@
                 </div>
                 <div class="group-career1">
                     <div class="common-inner">
-                        <form action="" method="get">
+                        <form action="#" method="get">
                             <fieldset>
                                 <legend class="blind">채용공고 검색</legend>
                                 <div class="flex-area">
@@ -171,7 +171,7 @@
                 </div>
                 <!-- mobile -->
                 <div class="group-career2">
-                    <form action="" method="get">
+                    <form action="#" method="get">
                         <fieldset>
                             <legend class="blind">검색</legend>
                             <div class="input-box">
@@ -590,8 +590,8 @@
                                                             <label for="cL">법무</label>
                                                         </li>
                                                         <li class="chk-box">
-                                                            <input type="checkbox" id="cIPR">
-                                                            <label for="cIPR">지식재산</label>
+                                                            <input type="checkbox" id="cIP">
+                                                            <label for="cIP">지식재산</label>
                                                         </li>
                                                     </ul>
                                                 </div>
