--- a/index.html
+++ b/index.html
@@ -796,8 +796,8 @@
                                     <label for="sejong">세종</label>
                                 </div>
                                 <div class="chk-box">
-                                    <input type="checkbox" id="Tokyo">
-                                    <label for="Tokyo">도쿄(일본)</label>
+                                    <input type="checkbox" id="tokyo">
+                                    <label for="tokyo">도쿄(일본)</label>
                                 </div>
                             </div>
                         </li>
