--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <div class="wrapper">
         <div class="skip-nav">
             <a href="#main">메인으로</a>
-        </div>
-    
-        
+        </div>        
         <header class="header">
             <div class="group-flex">
                 <div class="logo-area">
@@ -84,8 +82,6 @@
                 </nav>
             </div>
         </header>
-
-
         <main id="main" class="container">
             <section class="sc-video">
                 <h2 class="blind">소개동영상</h2>
@@ -867,7 +863,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-suntae.jpg" alt>
+                                        <img src="./assets/images/people-suntae.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -884,7 +880,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-minsun.jpg" alt>
+                                        <img src="./assets/images/people-minsun.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -901,7 +897,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-sujung.jpg" alt>
+                                        <img src="./assets/images/people-sujung.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -918,7 +914,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-minhyeong.jpg" alt>
+                                        <img src="./assets/images/people-minhyeong.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -935,7 +931,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-eunjin.jpg" alt>
+                                        <img src="./assets/images/people-eunjin.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -952,7 +948,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/people-gyeongsik.jpg" alt>
+                                        <img src="./assets/images/people-gyeongsik.jpg" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -988,7 +984,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-wel.png" alt>
+                                        <img src="./assets/images/benefits-wel.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1001,7 +997,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-refresh.png" alt>
+                                        <img src="./assets/images/benefits-refresh.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1014,7 +1010,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-space.png" alt>
+                                        <img src="./assets/images/benefits-space.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1027,7 +1023,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-tools.png" alt>
+                                        <img src="./assets/images/benefits-tools.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1040,7 +1036,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-snack.png" alt>
+                                        <img src="./assets/images/benefits-snack.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1053,7 +1049,7 @@
                             <li class="swiper-slide">
                                 <a href="">
                                     <div class="img-area">
-                                        <img src="./assets/images/benefits-growth.png" alt>
+                                        <img src="./assets/images/benefits-growth.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="title-box">
@@ -1079,8 +1075,6 @@
                 </div>
             </section>
         </main>
-
-
         <footer class="footer">
             <section class="group-info">
                 <h2 class="logo">
@@ -1105,8 +1099,6 @@
             </section>
         </footer>
     </div>
-  
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js"></script>
     <script src="./assets/js/main.js"></script>
