--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="" class="nav"><span>Jobs</span></a></li>
                         <li><a href="" class="nav"><span>Login</span></a></li>
                         <li><a href="" class="nav"><span>FAQ</span></a></li>
-                        <li class="lang-box">
+                        <li class="lang-box lang1">
                             <button class="btn-lang" aria-label="사이트 언어 변경">KR</button>
                             <div class="lang"><a href="">EN</a></div>
                         </li>
